fix!: alignment test

--- a/css/csoptwo.css
+++ b/css/csoptwo.css
@@ -344,7 +344,6 @@
     background-position: center;
     background-size: 90%;
     filter: invert();
-    margin: -10px 0 0 -10px;
 }
 
 .clickedthree::after{
